Added styles.css & started styling landing page.

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ronnie's Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <h1>Ronnie's Recipes</h1>
         <figure>
-            <img src="images/ronnie.webp">
             <figcaption> <em> To be like him, you have to eat like him.</em></figcaption>  
         </figure>
 
@@ -24,6 +24,11 @@
             <li><a href="recipes/cheeseburger.html">Double Beef & Bacon Cheeseburger</a></li>
         </ul>
 
+        <div class="row">
+            <div class="column"> <a href="recipes/cheeseburger.html"><img src="images/burger.webp"></a></div>
+            <div class="column"> <a href="recipes/crepes.html"><img src="images/crepes.webp"> </a></div>
+            <div class="column"> <a href="recipes/oats.html"><img src="images/oats.webp"> </a></div>
+        </div>
 
     </body>
 </html>
